--- a/index.html
+++ b/index.html
@@ -120,15 +120,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>34</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Git:</strong> <span>GitHub</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Correo Electrónico:</strong> <span>angeljoaquin.berrioluque@outlook.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Git:</strong> <a href="https://github.com/joaquiiin08"><span>GitHub</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Correo Electrónico:</strong> <a href="mailto:angeljoaquin.berrioluque@outlook.com"><span>angeljoaquin.berrioluque@outlook.com</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Me enorgullece haber recibido la insignia de honor como Mejor Empleado 2019 en el Departamento de TI de Viettel Perú SAC, reconocimiento que refleja mi dedicación y compromiso con la excelencia en mi trabajo. Este logro es un testimonio de mi pasión por la tecnología y mi capacidad para hacer una diferencia en la empresa.
             </p>
           </div>
         </div>
@@ -349,7 +348,7 @@
               <ul>
                 <li>Av. Paseo de la República 2199, Lima, Perú</li>
                 <li>+51 922535379</li>
-                <li>angeljoaquin.berrioluque@outlook.com</li>
+                <a href="mailto:angeljoaquin.berrioluque@outlook.com"><li>angeljoaquin.berrioluque@outlook.com</li></a>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -460,7 +459,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portafolio</h2>
-        <p>Principales Proyectos de implementación</p>
+        <p>Mi experiencia en diseño e implementación de soluciones tecnológicas ha permitido mejorar la eficiencia y eficacia de procesos críticos en entidades financieras y de telecomunicaciones. Algunos de mis proyectos destacados:</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -469,9 +468,9 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">TODOS</li>
-            <li data-filter=".filter-app">WEBAPPS</li>
+            <!-- <li data-filter=".filter-app">WEBAPPS</li>
             <li data-filter=".filter-product">APLICACIONES</li>
-            <li data-filter=".filter-branding">Web</li>
+            <li data-filter=".filter-branding">Web</li> -->
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -479,11 +478,11 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App Banking</h4>
-                <p>Implementación del sistema "Banking" posibilita la conexión física y lógica con entidades financieras a través de
+                <h4>Banking Gateway</h4>
+                <!-- <p>Implementación del sistema "Banking" posibilita la conexión física y lógica con entidades financieras a través de
                   Webservices independientes por entidad. Facilita a millones de usuarios de Bitel recargar y pagar servicios móviles e
-                  internet a través de diversos canales financieros como bancos, cajas municipales y puntos virtuales.</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  internet a través de diversos canales financieros como bancos, cajas municipales y puntos virtuales.</p> -->
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="Banking Gateway" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -492,11 +491,11 @@
               <img src="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Sistema de conciliación</h4>
-                <p>Sistema de conciliación automatiza el proceso de pago de comisiones a entidades aliadas. Utiliza procedimientos
+                <!-- <p>Sistema de conciliación automatiza el proceso de pago de comisiones a entidades aliadas. Utiliza procedimientos
                   almacenados y un dashboard para generar indicadores de toma de decisiones. La implementación redujo
                   considerablemente los tiempos de conciliación y permitió establecer estrategias comerciales más efectivas con socios
-                  de mejores indicadores en comisiones.</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  de mejores indicadores en comisiones.</p> -->
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Sistema de conciliación" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -505,11 +504,11 @@
               <img src="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Proyecto Renteseg</h4>
-                <p>Encargado de implementar la segunda y tercera fase del proyecto Renteseg, integrando las plataformas de BITEL y
+                <!-- <p>Encargado de implementar la segunda y tercera fase del proyecto Renteseg, integrando las plataformas de BITEL y
                   OSIPTEL mediante el intercambio automatizado de archivos encriptados. Impulsado por el equipo técnico y legal de
                   OSIPTEL, la implementación facilitó compartir la Base de Datos de Registro de Abonados de BITEL y la de equipos
-                  robados, bloqueados y liberados de forma automatizada.</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  robados, bloqueados y liberados de forma automatizada.</p> -->
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Proyecto Renteseg" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -518,16 +517,16 @@
               <img src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ServiceDesk & OpManager</h4>
-                <p>Implementación del sistema ServiceDesk & OpManager para gestión de incidentes y monitoreo de red en clientes
+                <!-- <p>Implementación del sistema ServiceDesk & OpManager para gestión de incidentes y monitoreo de red en clientes
                   corporativos del sector privado y público. Trabajo colaborativo con el partner MangaEngine, basado en análisis de
                   términos técnicos del cliente y diseño de un plan conjunto. Estas implementaciones fortalecieron la reputación de
-                  servicio de Bitel, cumpliendo términos de referencia y atrayendo proyectos significativos en el sector público</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  servicio de Bitel, cumpliendo términos de referencia y atrayendo proyectos significativos en el sector público</p> -->
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="ServiceDesk & OpManager" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Product 2</h4>
@@ -535,9 +534,9 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 2</h4>
@@ -545,9 +544,9 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 3</h4>
@@ -555,9 +554,9 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Product 3</h4>
@@ -565,9 +564,9 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 3</h4>
@@ -575,7 +574,7 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
 
@@ -590,8 +589,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Servicios</h2>
+        <p>Estos son los servicios que presto y están a disposición:</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -606,10 +605,10 @@
                 </svg>
                 <i class="bi bi-activity"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Nesciunt Mete</h3>
+              <a class="stretched-link">
+                <h3>Analisis de Datos</h3>
               </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>Extraigo insights valiosos de datos complejos para informar decisiones empresariales estratégicas.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -621,10 +620,10 @@
                 </svg>
                 <i class="bi bi-broadcast"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Eosle Commodi</h3>
+              <a class="stretched-link">
+                <h3>Administracion de Aplicaciones</h3>
               </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <p>Monitorea, gestiona y optimiza el rendimiento de aplicaciones para asegurar disponibilidad y escalabilidad.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -636,10 +635,10 @@
                 </svg>
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Ledo Markt</h3>
+              <a class="stretched-link">
+                <h3>Gestion de Proyectos</h3>
               </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+              <p>Planeo, ejecuto y controlo proyectos para alcanzar objetivos a tiempo, dentro del presupuesto y con calidad.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -651,11 +650,11 @@
                 </svg>
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Asperiores Commodit</h3>
+              <a class="stretched-link">
+                <h3>Desarrollo Backend</h3>
               </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-              <a href="#" class="stretched-link"></a>
+              <p>Creo y mantengo la lógica de negocio y la infraestructura de aplicaciones web escalables.</p>
+              <a   class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -667,11 +666,11 @@
                 </svg>
                 <i class="bi bi-calendar4-week icon"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Velit Doloremque</h3>
+              <a class="stretched-link">
+                <h3>Implementacion de Arquitecturas</h3>
               </a>
               <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-              <a href="#" class="stretched-link"></a>
+              <a class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -683,11 +682,11 @@
                 </svg>
                 <i class="bi bi-chat-square-text"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Dolori Architecto</h3>
+              <a class="stretched-link">
+                <h3>Soporte Corporativo Bilingue</h3>
               </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-              <a href="#" class="stretched-link"></a>
+              <p>Asistencia técnica y resolución de incidentes en inglés y español para empresas.</p>
+              <a class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
