update ramas portafolio

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                   Webservices independientes por entidad. Facilita a millones de usuarios de Bitel recargar y pagar servicios móviles e
                   internet a través de diversos canales financieros como bancos, cajas municipales y puntos virtuales.</p> -->
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="Banking Gateway" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-id1.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -496,7 +496,7 @@
                   considerablemente los tiempos de conciliación y permitió establecer estrategias comerciales más efectivas con socios
                   de mejores indicadores en comisiones.</p> -->
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Sistema de conciliación" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-id2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -509,7 +509,7 @@
                   OSIPTEL, la implementación facilitó compartir la Base de Datos de Registro de Abonados de BITEL y la de equipos
                   robados, bloqueados y liberados de forma automatizada.</p> -->
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Proyecto Renteseg" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-id3.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -522,7 +522,7 @@
                   términos técnicos del cliente y diseño de un plan conjunto. Estas implementaciones fortalecieron la reputación de
                   servicio de Bitel, cumpliendo términos de referencia y atrayendo proyectos significativos en el sector público</p> -->
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="ServiceDesk & OpManager" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-id4.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
