--- a/portfolio-details-id1.html
+++ b/portfolio-details-id1.html
@@ -44,12 +44,12 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>Acerca de mi</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resumen</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portafolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Servicios</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contacto</span></a></li>
+        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
+        <li><a href="index.html#about"><i class="bi bi-person navicon"></i><span>Acerca de mi</span></a></li>
+        <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resumen</span></a></li>
+        <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i><span>Portafolio</span></a></li>
+        <li><a href="index.html#services"><i class="bi bi-hdd-stack navicon"></i><span>Servicios</span></a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i><span>Contacto</span></a></li>
       </ul>
     </nav>
 
@@ -101,7 +101,7 @@
               <img src="assets/img/portfolio/app-1.jpg" alt="">
             </div>
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <img src="assets/img/portfolio/product-1.jpg" alt="">
             </div>
 
@@ -111,7 +111,7 @@
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/books-1.jpg" alt="">
-            </div>
+            </div> -->
 
           </div>
           <div class="swiper-button-prev"></div>
@@ -121,13 +121,16 @@
 
         <div class="row justify-content-between gy-4 mt-4">
 
+          
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>Implementacion del Sistema Banking Gateway API</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Implementación del sistema "Banking" posibilita la conexión física y lógica con entidades financieras a través de
+                Webservices independientes por entidad. Facilita a millones de usuarios de Bitel recargar y pagar servicios móviles e
+                internet a través de diversos canales financieros como bancos, cajas municipales y puntos virtuales
               </p>
-              <p>
+              <!-- <p>
                 Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
               </p>
 
@@ -152,17 +155,17 @@
                 Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
               </p>
 
-            </div>
+            </div> -->
           </div>
 
-          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="portfolio-info">
               <h3>Informacion del Proyecto</h3>
               <ul>
-                <li><strong>Categoria:</strong> Web design</li>
-                <li><strong>Cliente:</strong> ASU Company</li>
-                <li><strong>Fecha del Proyecto:</strong> 01 March, 2020</li>
-                <li><strong>URL:</strong> <a href="#">www.example.com</a></li>
+                <li><strong>Categoria:</strong> Diseño API</li>
+                <li><strong>Cliente:</strong> Bitel Perú</li>
+                <li><strong>Fecha del Proyecto:</strong> 01 Julio, 2019</li>
+                <!-- <li><strong>URL:</strong> <a href="#">www.example.com</a></li> -->
                 <!-- <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li> -->
               </ul>
             </div>
