--- a/portfolio-details-id1.html
+++ b/portfolio-details-id1.html
@@ -154,8 +154,8 @@
               <p>
                 Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
               </p>
-
-            </div> -->
+-->
+            </div> 
           </div>
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
