--- a/portfolio-details-id3.html
+++ b/portfolio-details-id3.html
@@ -97,21 +97,21 @@
           </script>
           <div class="swiper-wrapper align-items-center">
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <img src="assets/img/portfolio/app-1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/product-1.jpg" alt="">
-            </div>
+            </div> -->
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/branding-1.jpg" alt="">
             </div>
-
+<!-- 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/books-1.jpg" alt="">
-            </div>
+            </div> -->
 
           </div>
           <div class="swiper-button-prev"></div>
@@ -124,11 +124,14 @@
           
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>Proyecto Renteseg</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Encargado de implementar la segunda y tercera fase del proyecto Renteseg, integrando las plataformas de BITEL y
+OSIPTEL mediante el intercambio automatizado de archivos encriptados. Impulsado por el equipo técnico y legal de
+OSIPTEL, la implementación facilitó compartir la Base de Datos de Registro de Abonados de BITEL y la de equipos
+robados, bloqueados y liberados de forma automatizada.
               </p>
-              <p>
+              <!-- <p>
                 Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
               </p>
 
@@ -151,7 +154,7 @@
 
               <p>
                 Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
+              </p> -->
 
             </div>
           </div>
@@ -160,10 +163,10 @@
             <div class="portfolio-info">
               <h3>Informacion del Proyecto</h3>
               <ul>
-                <li><strong>Categoria:</strong> Web design</li>
-                <li><strong>Cliente:</strong> ASU Company</li>
-                <li><strong>Fecha del Proyecto:</strong> 01 March, 2020</li>
-                <li><strong>URL:</strong> <a href="#">www.example.com</a></li>
+                <li><strong>Categoria:</strong> Diseño API</li>
+                <li><strong>Cliente:</strong> Bitel Perú</li>
+                <li><strong>Fecha del Proyecto:</strong> 01 Diciembre, 2020</li>
+                <!-- <li><strong>URL:</strong> <a href="#">www.example.com</a></li> -->
                 <!-- <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li> -->
               </ul>
             </div>
