--- a/portfolio-details-id4.html
+++ b/portfolio-details-id4.html
@@ -97,7 +97,7 @@
           </script>
           <div class="swiper-wrapper align-items-center">
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <img src="assets/img/portfolio/app-1.jpg" alt="">
             </div>
 
@@ -107,7 +107,7 @@
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
+            </div> -->
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/books-1.jpg" alt="">
@@ -124,11 +124,14 @@
           
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>Implementacion del sistema ServiceDesk &amp; OpManager</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Implementación del sistema ServiceDesk & OpManager para gestión de incidentes y monitoreo de red en clientes
+corporativos del sector privado y público. Trabajo colaborativo con el partner MangaEngine, basado en análisis de
+términos técnicos del cliente y diseño de un plan conjunto. Estas implementaciones fortalecieron la reputación de
+servicio de Bitel, cumpliendo términos de referencia y atrayendo proyectos significativos en el sector público.
               </p>
-              <p>
+              <!-- <p>
                 Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
               </p>
 
@@ -151,7 +154,7 @@
 
               <p>
                 Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
+              </p> -->
 
             </div>
           </div>
@@ -160,10 +163,10 @@
             <div class="portfolio-info">
               <h3>Informacion del Proyecto</h3>
               <ul>
-                <li><strong>Categoria:</strong> Web design</li>
-                <li><strong>Cliente:</strong> ASU Company</li>
-                <li><strong>Fecha del Proyecto:</strong> 01 March, 2020</li>
-                <li><strong>URL:</strong> <a href="#">www.example.com</a></li>
+                <li><strong>Categoria:</strong> Desplegar Web</li>
+                <li><strong>Cliente:</strong> Bitel Perú</li>
+                <li><strong>Fecha del Proyecto:</strong> 01 Marzo, 2022</li>
+                <!-- <li><strong>URL:</strong> <a href="#">www.example.com</a></li> -->
                 <!-- <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li> -->
               </ul>
             </div>
