--- a/portfolio-details-id2.html
+++ b/portfolio-details-id2.html
@@ -97,21 +97,21 @@
           </script>
           <div class="swiper-wrapper align-items-center">
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <img src="assets/img/portfolio/app-1.jpg" alt="">
-            </div>
+            </div> -->
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/product-1.jpg" alt="">
             </div>
-
+<!-- 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/branding-1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
               <img src="assets/img/portfolio/books-1.jpg" alt="">
-            </div>
+            </div> -->
 
           </div>
           <div class="swiper-button-prev"></div>
@@ -124,11 +124,14 @@
           
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>Sistema de Conciliacion</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Sistema de conciliación automatiza el proceso de pago de comisiones a entidades aliadas. Utiliza procedimientos
+                almacenados y un dashboard para generar indicadores de toma de decisiones. La implementación redujo
+                considerablemente los tiempos de conciliación y permitió establecer estrategias comerciales más efectivas con socios
+                de mejores indicadores en comisiones.
               </p>
-              <p>
+              <!-- <p>
                 Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
               </p>
 
@@ -152,18 +155,18 @@
               <p>
                 Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
               </p>
-
+-->
             </div>
           </div>
-
+ 
           <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="portfolio-info">
               <h3>Informacion del Proyecto</h3>
               <ul>
-                <li><strong>Categoria:</strong> Web design</li>
-                <li><strong>Cliente:</strong> ASU Company</li>
-                <li><strong>Fecha del Proyecto:</strong> 01 March, 2020</li>
-                <li><strong>URL:</strong> <a href="#">www.example.com</a></li>
+                <li><strong>Categoria:</strong> Diseño API</li>
+                <li><strong>Cliente:</strong> Bitel Perú</li>
+                <li><strong>Fecha del Proyecto:</strong> 01 Octubre, 2018</li>
+                <!-- <li><strong>URL:</strong> <a href="#">www.example.com</a></li> -->
                 <!-- <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li> -->
               </ul>
             </div>
